<resources>
    <string name="app_name">iante motors</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>

    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="full_name">full_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Toolbar titles when navigation menu item is selected -->

    <string name="nav_Home">Home</string>
    <string name="nav_My_cars">My cars</string>
    <string name="nav_Parts">Parts</string>
    <string name="nav_Warehouses">Warehouses</string>
    <string name="nav_Fuel_consumption">Fuel consupmtion</string>
    <string name="nav_Past_records">Past records</string>
    <string name="nav_Language">Language</string>



    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">hello_world</string>
    <string name="make">make:</string>
    <string name="model">model:</string>
    <string name="engine">engine:</string>
    <string name="registration">Registration number:</string>
    <string name="change_language">change Language</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">maxmaine66@gmail.com</string>
    <string name="test_password">markmende132</string>
    <string name="firebase_path">location</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_odometer_reading">Current odometer reading:</string>
    <string name="litres">litres added:</string>
    <string name="amount_spent">Amount spent</string>
    <string name="action_save">Save</string>
    <string name="book_car">Book car</string>
    <string name="phone_number">phone number</string>
    <string name="registration_number">Registration number</string>
    <string name="select_date">Select Date</string>
    <string name="save">save</string>
    <string name="robert_ian">Robert Ian</string>
    <string name="nairobi_kenya">Nairobi, Kenya</string>
    <string name="cars">Cars</string>
    <string name="mercedes_e200">Mercedes E200</string>
    <string name="maxmaine66_gmail_com">maxmaine66@gmail.com</string>
    <string name="past_records">past records</string>
</resources>
