<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordsFragment"
    android:baselineAligned="false"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/myRecycler"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
    android:layout_weight = "1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/make"
            android:id= "@id/make"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/model"
            android:id= "@id/model"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/engine"
            android:id= "@id/Engine"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/registration"
            android:id= "@id/Reg"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/current_odometer_reading"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id= "@id/odometer"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/litres"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id= "@id/litres"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/amount_spent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id= "@id/amount"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CheckRecords"
            android:visibility="invisible"
            android:text="@string/past_records"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        android:layout_weight = "1">

    </LinearLayout>


</LinearLayout>