<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_register"
    tools:context="com.example.iante.iantemotors.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/my_profile_pic"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_user"
                />
            <TextView
                android:id="@+id/cars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cars"
                android:layout_below="@+id/my_profile_pic"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:layout_below="@+id/cars"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make"
                android:layout_below="@+id/model"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/Engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/engine"
                android:layout_below="@+id/make"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/Reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cars"
                android:layout_below="@+id/Engine"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>

